--- a/app/index.html
+++ b/app/index.html
@@ -6,16 +6,13 @@
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-    <h4>Hello, World???</h4>
+  {{ 6*8 }}
     <ui-view></ui-view>
 <!-- Angular -->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 
 <!-- AngularUI Router -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
-
-<!-- AngularFire -->
-<script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
 
 <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
 <script>
@@ -31,7 +28,12 @@
   firebase.initializeApp(config);
 </script>
 
+<!-- AngularFire -->
+<script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+
 <!-- Application Files -->
     <script src="/scripts/app.js"></script>
+    <script src="/scripts/controllers/HomeCtrl.js"></script>
+    <script src="/scripts/services/Room.js"></script>
 </body>
 </html>
