--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
     <script src="/scripts/controllers/ModalCtrl.js"></script>
     <script src="/scripts/controllers/ModalInstanceCtrl.js"></script>
     <script src="/scripts/controllers/LoginCtrl.js"></script>
+    <script src="/scripts/controllers/SecurityCtrl.js"></script>
     <script src="/scripts/services/Room.js"></script>
     <script src="/scripts/services/Message.js"></script>
 </body>
