struggling with user list

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,9 @@
     <title>Bloc Chat</title>
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css">
+    <link href="https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer|Raleway" rel="stylesheet">
 </head>
-<body>
+<body class="container">
     <ui-view></ui-view>
 <!-- Angular -->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
@@ -46,5 +47,6 @@
     <script src="/scripts/controllers/SecurityCtrl.js"></script>
     <script src="/scripts/services/Room.js"></script>
     <script src="/scripts/services/Message.js"></script>
+    <script src="/scripts/services/Users.js"></script>
 </body>
 </html>
